Bug 103320 - [gtk3] pressed buttons on the toolbar have wrong coloring.
Summary: [gtk3] pressed buttons on the toolbar have wrong coloring.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2016-10-18 18:10 UTC by Hussam Al-Tayeb
Modified: 2016-10-21 15:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
gtk-demo toolbar vs LO toolbar. (22.81 KB, image/png)
2016-10-18 18:10 UTC, Hussam Al-Tayeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2016-10-18 18:10:36 UTC
Created attachment 128061 [details]
gtk-demo toolbar vs LO toolbar.

Notice the pressed button in LO toolbar and the one in gtk3-demo.
The one in gtk3-demo has darker coloring for the pressed button area.
Comment 1 Caolán McNamara 2016-10-21 15:29:35 UTC
I think this was working and went awry with the fix for bug #100251
Comment 2 Commit Notification 2016-10-21 15:35:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f6f5519079e3508ac1302aa5907cfc6098c525e

Resolves: tdf#103320 pressed buttons appear as hover buttons in toolbar

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2016-10-21 15:36:41 UTC
both now seem to work, probably need to rework the toolbar stuff to use the new css code rather than grabbing the styles of real widgets.