Resolves: tdf#103320 pressed buttons appear as hover buttons in toolbar

since...

commit 3498ed37527b7af795f00dc6a55c11e65a313186
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Oct 18 13:08:47 2016 +0100

    Resolves: tdf#100251 gtk3 toolbar separators are white in Adwaita

so remove setting the parent of the toolbar again, colors remain good
cause we ended up using gtk_render_background+gtk_render_frame for
the new-style code path anyway

Change-Id: Idd01537acbd92d6b41e0ff7fa2306b8c49f23ad3